--- a/hbd/style.css
+++ b/hbd/style.css
@@ -139,3 +139,23 @@
     font-size: 120px;
     line-height: 120px;
   }
+
+.content-text {
+  padding-top: 10px;
+  width: 100%;
+  height: 50%;
+  overflow: hidden;
+  font-size: 14px;
+  line-height: 30px;
+}
+
+.img-target {
+  max-width: 100%;
+  max-height: 80%;
+  border-radius: 100%;
+  object-fit: contain;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -o-border-radius: 100%;
+}
